# sony-headphones-desktop-widget

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md
Bridge/: CMakeLists.txt
Bridge/src/: main.cpp
Packaging/: RMSKIN.ini  state.default.ini
Scripts/: Build-Bridge.ps1  Build-Package.ps1
Skin/SonyXM5/: Advanced.ini  Minimal.ini
Skin/SonyXM5/@Resources/: AdvancedLine.inc  AdvancedStudio.inc  MonoSignal.inc  README.txt  UserSettings.inc  Variables.inc
Skin/SonyXM5/@Resources/Data/: settings.ini
Skin/SonyXM5/@Resources/Licenses/: SonyHeadphonesClient-LICENSE.txt
Skin/SonyXM5/@Resources/Scripts/: AccentColorPicker.ps1  BatteryAlert.ps1  BridgeLauncher.ps1  Debug.lua  Settings.lua  SonyXM5.lua  Welcome.lua
Skin/SonyXM5/Debug/: Debug.ini
Skin/SonyXM5/Settings/: Settings.ini
Skin/SonyXM5/Welcome/: Welcome.ini
